--- a/client-data/board.html
+++ b/client-data/board.html
@@ -47,7 +47,7 @@
 
 			<ul class="tools" id="settings">
 				<li class="tool" tabindex="-1">
-					<input class="tool-icon" type="color" id="chooseColor" value="#1913B0" />
+					<embed class="tool-icon" width="60" height="60" src="palette.svg" id="chooseColor" />
 					<label class="tool-name" for="chooseColor">{{translations.color}}</label>
 					<span class="colorPresets" id="colorPresetSel">
 						<span class="colorPresetButton"></span>
