Try fixing icon blocking inputs

--- a/client-data/board.html
+++ b/client-data/board.html
@@ -47,7 +47,8 @@
 
 			<ul class="tools" id="settings">
 				<li class="tool" tabindex="-1">
-					<embed class="tool-icon" width="60" height="60" src="palette.svg" id="chooseColor" />
+					<div id="chooseColorBackground"></div>
+					<img class="tool-icon" width="60" height="60" src="palette.svg" id="chooseColor" />
 					<label class="tool-name" for="chooseColor">{{translations.color}}</label>
 					<span class="colorPresets" id="colorPresetSel">
 						<span class="colorPresetButton"></span>
